--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,9 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_USER: revealme_user
-      POSTGRES_PASSWORD: S3cureP@ssw0rd!
-      POSTGRES_DB: revealme_db
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./data/postgres:/var/lib/postgresql/data
@@ -65,12 +65,7 @@ services:
       redis:
         condition: service_healthy
     env_file:
-      - ./backend/.env
-    environment:
-      REDIS_URL: redis://redis:6379/0
-      CELERY_BROKER_URL: redis://redis:6379/0
-      CELERY_RESULT_BACKEND: redis://redis:6379/0
-      DATABASE_URL_SYNC: postgresql://revealme_user:S3cureP@ssw0rd!@postgres:5432/revealme_db
+      - ./.env
     ports:
       - "8000:8000"
     volumes:
@@ -98,11 +93,7 @@ services:
       redis:
         condition: service_healthy
     env_file:
-      - ./backend/.env
-    environment:
-      REDIS_URL: redis://redis:6379/0
-      CELERY_BROKER_URL: redis://redis:6379/0
-      CELERY_RESULT_BACKEND: redis://redis:6379/0
+      - ./.env
     volumes:
       - ./backend:/app
       - ./data/reports:/app/reports
