--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Environment variables
+# Environment
 .env
 .env.local
 .env.development.local
@@ -12,40 +12,17 @@ __pycache__/
 *.so
 .Python
 build/
-develop-eggs/
 dist/
-downloads/
 eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
 *.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
 
-# Virtual environments
+# Virtual env
 venv/
 env/
 ENV/
+.venv/
 env.bak/
 venv.bak/
-.venv/
-
-# Frontend placeholder
-/frontend/
-
-# Windows scripts
-start.ps1
-stop.ps1
-
-# Scripts (keep bootstrap.sh)
-scripts/*.ps1
-scripts/*.bat
 
 # Node.js
 node_modules/
@@ -54,124 +31,32 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# IDEs
+# IDEs & OS
 .vscode/
 .idea/
 *.swp
-*.swo
 *~
-
-# OS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
 
 # Docker
 .dockerignore
 
-# Logs
+# Logs & coverage
 logs/
 *.log
-
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
 coverage/
-*.lcov
+.nyc_output/
 
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Gatsby files
-.cache/
-public
-
-# Storybook build outputs
-.out
-.storybook-out
-
-# Temporary folders
-tmp/
-temp/
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# Reports and data
-data/reports/*
-!data/reports/.gitkeep
+# Data directories
 data/postgres/*
 !data/postgres/.gitkeep
 data/spiderfoot/*
 !data/spiderfoot/.gitkeep
+data/reports/*
+!data/reports/.gitkeep
 
-# Secrets and keys
+# Keys & backups
 *.pem
 *.key
 *.crt
-*.p12
-*.pfx
-
-# Backup files
-*.bak
-*.backup
-*.old
-
-# Test files
-test-results/
-coverage/ 
+*.bak 
