--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,4 +116,18 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost:8080"]
       interval: 30s
       timeout: 10s
-      retries: 3 
+      retries: 3
+
+  # React Frontend Service
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: revealme-frontend
+    ports:
+      - "5173:80"
+    depends_on:
+      - backend
+    networks:
+      - revealme-net
+    restart: unless-stopped 
